--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "sit725-2022-t3-prac2",
+  "name": "SIT725-2022-T3-PRAC3",
   "version": "1.0.0",
-  "description": "SIT725 Prac 2",
+  "description": "SIT725 PRAC 2",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DaGoblin/sit725-2022-t3-prac2.git"
+    "url": "git+https://github.com/rajayarli/SIT725-2022-T3-PRAC4.git"
   },
   "keywords": [
     "Express",
     "Node"
   ],
-  "author": "Phil Williams",
+  "author": "Raja Ramesh Yarlagadda",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DaGoblin/sit725-2022-t3-prac2/issues"
+    "url": "https://github.com/rajayarli/SIT725-2022-T3-PRAC4/issues"
   },
-  "homepage": "https://github.com/DaGoblin/sit725-2022-t3-prac2#readme",
+  "homepage": "https://github.com/rajayarli/SIT725-2022-T3-PRAC4#readme",
   "dependencies": {
     "express": "^4.18.2",
     "node": "^19.1.0"
