--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^10.2.0",
     "mongodb": "^4.12.1",
     "node": "^19.3.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.5.4"
   }
 }
